Fixed spacing bug in frequency array. moved colors over to variables. cleaned up dev logs.

--- a/src/app/list/item-creator/item-creator.component.scss
+++ b/src/app/list/item-creator/item-creator.component.scss
@@ -51,7 +51,7 @@ form {
         color: $input-placeholder-color;
     }
     input:focus, select:focus {
-        border: 2px solid #5cd49c;
+        border: 2px solid $button-border-input-highlight-color;
         outline: none;
         color: $input-placeholder-color !important;
     }
